# MercadoBairro

./: CMakeLists.txt  Func05.c  Funcao4.c  Funções1&2.c  Principal.c  README.md  Separar_Tela
AV2/: Func06.c  Funcao4.c  Menus.c
Avaliação 2/: CMakeLists.txt  Func.c  Func.h  Func06.c  Funcao4.c  Funcionalidade 4  Funcionalidade 5  Funcionalidade 6  Funcoes.h  Funções1&2.c  Makefile  Menus.c  Menus.h  Principal.c  Registros.h
src/: Func06.c  Func_01_02.c  Func_03_05.c  Func_04.c  Func_05.c  Func_06.c  Func_07_08.c  Func_07_A_10.c  Func_4.c  Func_Exib.c  Funcoes.h  Menus.c  Menus.h  Principal.c  Registros.h  Utilitario.c
