cmake_minimum_required(VERSION 3.22)
project(Principal C)

set(CMAKE_C_STANDARD 99)

add_executable(AV2
        src/Principal.c
        src/Func_01_02.c
        src/Func_03_05.c
        src/Func_04.c
        src/Func_06.c
        src/Func_07_A_10.c
        src/Func_Exib.c
        src/Menus.c
        src/Utilitario.c
        )